# money_for_mima

./: .gitignore  Cargo.toml  README.md  config.json  pubspec.yaml
lib/: backup  main.dart
lib/includes/: app_bar_content.dart
lib/models/: account.dart  action_item.dart  database_manager.dart  due.dart  item_menu.dart  outsider.dart  table_sort_item.dart  transactions.dart  user_data.dart
lib/pages/: due_page.dart  echeance_page.dart  home_page.dart  settings_page.dart  transaction_page.dart
lib/pages/settings/: outsider_list_view.dart
lib/utils/: custom_color_schema.dart  popup_shower.dart  tools.dart  version_manager.dart
linux/: CMakeLists.txt  my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: releaser.bat  releaser.sh
rust/installer/: Cargo.toml  releaser.bat  releaser.sh
rust/installer/src/: installer_lib.rs  lib.rs  main.rs
rust/lib/: Cargo.toml
rust/lib/src/: common_functions.rs  common_functions_trait.rs  custom_error.rs  lib.rs  log_level.rs  shortcut_trait.rs
rust/linux-installer/: Cargo.toml  releaser.sh
rust/linux-installer/src/: lib.rs  main.rs  shared_installer.rs  shared_linux.rs  shared_tools.rs
rust/linux-upgrader/: Cargo.toml
rust/linux-upgrader/src/: lib.rs  main.rs  shared_tools.rs  shared_upgrader.rs
rust/macos-installer/: Cargo.toml
rust/macos-installer/src/: shared_tools.rs
rust/startup_program/: Cargo.toml
rust/startup_program/src/: main.rs
rust/uninstaller/: Cargo.toml
rust/uninstaller/src/: main.rs
rust/upgrader/: Cargo.toml
rust/upgrader/src/: lib.rs  main.rs  shared_tools.rs  upgrader_lib.rs
rust/windows-installer/: Cargo.toml  releaser.bat
rust/windows-installer/src/: lib.rs  main.rs  shared_tools.rs  shared_windows.rs
rust/windows-upgrader/: Cargo.toml
rust/windows-upgrader/src/: lib.rs  main.rs  shared_upgrader.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
