[package]
name = "installer"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
reqwest = "0.11.18"
fs_extra = "1.3.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.87"
serde = { version = "1.0.188", features = ["derive"] }
async-trait = "0.1.72"
zip-extract = "0.1.2"

shared_elements = { path = "../lib/" }

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
