[package]
name = "shared_elements"
version = "1.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.0"
reqwest = "0.11.18"
fs_extra = "1.3.0"
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0.87"
serde = { version = "1.0.147", features = ["derive"] }
async-trait = "0.1.72"
chrono = "0.4.26"
octocrab = "0.29.1"
regex = "1.9.1"

[target.x86_64-unknown-linux-gnu.dependencies]
zip-extract = "0.1.2"

[target.'cfg(windows)'.dependencies]
zip = { version = "0.6.6", default-features = false }

