[package]
name = "linux-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "0.9.1"
dirs = "5.0.0"
os = "0.1.0"
reqwest = "0.11.18"
fs_extra = "1.3.0"
tokio = { version = "1.28.2", features = ["full"] }
zip-extract = "0.1.2"
json = "0.12.4"
