[package]
name = "upgrader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
fs_extra = "1.3.0"
tokio = { version = "1.28.2", features = ["full"] }
json = "0.12.4"
async-trait = "0.1.72"

[target.x86_64-unknown-linux-gnu.dependencies]
zip-extract = "0.1.2"


[target.x86_64-pc-windows-gnu.dependencies]
zip = { version = "0.6.6", default-features = false }
