[package]
name = "windows-installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mslnk = "0.1.8"
sys-info = "0.9.1"
fs_extra = "1.3.0"
dirs = "5.0.0"
os = "0.1.0"
reqwest = "0.11.18"
zip-extract = "0.1.2"
json = "0.12.4"
tokio = { version = "1.28.2", features = ["full"] }
